# agent-flight-recorder

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/agent_flight_recorder/: __init__.py  cli.py  commands.py  commit_messages.py  mcp_server.py  repo.py  reports.py  risks.py  session_data.py  store.py  terminal_ui.py  web_ui.py
tests/: __init__.py  test_cli.py  test_commands.py  test_commit_messages.py  test_mcp_server.py  test_repo.py  test_reports.py  test_risks.py  test_session_data.py  test_store.py  test_terminal_ui.py  test_web_ui.py
