[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "agent-flight-recorder"
version = "0.1.0"
description = "Local flight recorder for AI coding agent sessions"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "popka13221" }
]
keywords = ["ai", "agents", "cli", "git", "developer-tools"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Version Control :: Git",
  "Topic :: Utilities",
]
dependencies = [
  "mcp>=1.27,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
afr = "agent_flight_recorder.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
