[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "agent-flight-recorder"
version = "0.1.0"
description = "Local flight recorder for AI coding agent sessions"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "popka13221" }
]
keywords = ["ai", "agents", "cli", "git", "developer-tools"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Version Control :: Git",
  "Topic :: Utilities",
]
dependencies = [
  "mcp>=1.27,<2",
]

[project.urls]
Homepage = "https://github.com/popka13221/agent-flight-recorder"
Repository = "https://github.com/popka13221/agent-flight-recorder"
Issues = "https://github.com/popka13221/agent-flight-recorder/issues"

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8.0",
  "ruff>=0.5.0",
]

[project.scripts]
afr = "agent_flight_recorder.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
